--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
     <div class="container">
 
       <a href="#" class="logo">
-
-        <!-- Büşo yazı -->
-
         <img src="./assets/images/busu-dark.png" width="64" height="24" alt="Julia home"> 
       </a>
 
@@ -73,19 +70,15 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="#about" class="navbar-link">About</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Projects</a>
+            <a href="#project" class="navbar-link">Projects</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Blog</a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="#contact" class="navbar-link">Contact</a>
           </li>
 
         </ul>
@@ -99,19 +92,19 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/busra-kesici-1b000114b/" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://github.com/busrakesici" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/busraksici_/" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -181,7 +174,7 @@
         - #ABOUT
       -->
 
-      <section class="section about" aria-label="about">
+      <section class="section about" aria-label="about" id="about">
         <div class="container">
 
           <div class="wrapper">
@@ -342,7 +335,7 @@
         - #PROJECT
       -->
 
-      <section class="section project" aria-labelledby="project-label">
+      <section class="section project" aria-labelledby="project-label" id="project">
         <div class="container">
 
           <div class="title-wrapper" data-reveal="top">
@@ -494,7 +487,7 @@
         - #CONTACT
       -->
 
-      <section class="section contact" aria-label="contact">
+      <section class="section contact" aria-label="contact" id="contact">
         <div class="container">
 
           <div class="contact-card">
@@ -554,19 +547,19 @@
       <ul class="social-list">
 
         <li>
-          <a href="#" class="social-link">
+          <a href="https://www.linkedin.com/in/busra-kesici-1b000114b/" target="_blank" class="social-link">
             <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </li>
 
         <li>
-          <a href="#" class="social-link">
+          <a href="https://github.com/busrakesici" target="_blank" class="social-link">
             <ion-icon name="logo-github"></ion-icon>
           </a>
         </li>
 
         <li>
-          <a href="#" class="social-link">
+          <a href="https://www.instagram.com/busraksici_/" target="_blank" class="social-link">
             <ion-icon name="logo-instagram"></ion-icon>
           </a>
         </li>
@@ -581,6 +574,17 @@
 
 
   <!-- 
+    - #scroll up
+  -->
+  <a href="#" class="scrollup" id="scroll-up">
+    <img src="./assets/images/arrow-up-outline.svg" alt="">
+    <ion-icon name="arrow-up-outline scroll-up_icon"></ion-icon>
+  </a>
+
+
+
+
+  <!-- 
     - custom js link
   -->
   <script src="./assets/js/script.js"></script>
@@ -590,7 +594,6 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
 
 </html>
