--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/busu-dark.png" width="64" height="24" alt="Julia home"> 
+        <img src="./assets/images/busu-dark.png" width="64" height="24" alt="Julia home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -137,8 +137,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/busu.jpg" width="560" height="540" alt="Büşra" class="w-100"
-              data-reveal="top">
+            <img src="./assets/images/busu.jpg" width="560" height="540" alt="Büşra" class="w-100" data-reveal="top">
 
             <img src="./assets/images/hero-shape.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
               data-reveal="top" data-reveal-delay="0.25s">
@@ -507,15 +506,15 @@
 
             </div>
 
-            <form action="" class="contact-form" data-reveal="right">
+            <form action="https://formspree.io/f/xpznvolw" method="POST" class="contact-form" data-reveal="right">
 
               <div class="input-wrapper">
-                <input type="text" name="name" placeholder="Name *" required class="input-field">
+                <input type="text" name="name" placeholder="Name" required class="input-field">
 
-                <input type="email" name="email_address" placeholder="Email *" required class="input-field">
+                <input type="email" name="email_address" placeholder="Email" required class="input-field">
               </div>
 
-              <textarea name="message" placeholder="Message *" required class="input-field"></textarea>
+              <textarea name="message" placeholder="Message" required class="input-field"></textarea>
 
               <button type="submit" class="btn btn-secondary">Send message</button>
 
