--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -155,9 +155,9 @@
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
-              <a href="#" class="btn btn-primary">See My Works</a>
+              <a href="#project" class="btn btn-primary">See My Works</a>
 
-              <a href="#" class="btn btn-secondary">Contact Me</a>
+              <a href="#contact" class="btn btn-secondary">Contact Me</a>
             </div>
 
           </div>
@@ -199,7 +199,7 @@
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 100%; background-color: #c7b1dd"></div>
+                  <div class="progress-fill" style="width: 100%; background-color: #c05301a3"></div>
                 </div>
 
               </li>
@@ -213,7 +213,7 @@
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 80%; background-color: #8caeec"></div>
+                  <div class="progress-fill" style="width: 80%; background-color: #6271ac9e"></div>
                 </div>
 
               </li>
@@ -227,7 +227,7 @@
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 85%; background-color: #b0d4c1"></div>
+                  <div class="progress-fill" style="width: 85%; background-color: #777e5296"></div>
                 </div>
 
               </li>
@@ -241,7 +241,7 @@
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 90%; background-color: #e3a6b6"></div>
+                  <div class="progress-fill" style="width: 90%; background-color: #74637c8a"></div>
                 </div>
 
               </li>
@@ -347,18 +347,18 @@
               </p>
             </div>
 
-            <a href="#" class="btn btn-secondary">See All Projects</a>
+            <a href="https://www.instagram.com/busraksici_/" target="_blank" class="btn btn-secondary">See All Projects</a>
 
           </div>
 
           <ul class="grid-list">
 
             <li>
-              <div class="project-card project-card-1" style="background-color: #f8f5fb">
+              <div class="project-card project-card-1" style="background-color: #c053011f">
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class="card-tag" style="color: #a07cc5">Web Design</p>
+                  <p class="card-tag" style="color: #c05301">Web Design</p>
 
                   <h3 class="h3 card-title">Snowlake Theme</h3>
 
@@ -367,7 +367,7 @@
                     porta felis euismod semper. Fusce dapibus tellus cursus.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #a07cc5">
+                  <a href="#" class="btn-text" style="color: #c05301">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -376,7 +376,7 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-1.png" width="650" height="370" loading="lazy" alt="Web Design"
+                  <img src="./assets/images/interior project 1.png" width="650" height="370" loading="lazy" alt="Web Design"
                     class="w-100">
                 </figure>
 
@@ -384,11 +384,11 @@
             </li>
 
             <li>
-              <div class="project-card project-card-2" style="background-color: #f1f5fd">
+              <div class="project-card project-card-2" style="background-color: #91acbd26">
 
                 <div class="card-content" data-reveal="right">
 
-                  <p class=" card-tag" style="color: #3f78e0">Mobile Design</p>
+                  <p class=" card-tag" style="color: #6271ac">Mobile Design</p>
 
                   <h3 class="h3 card-title">Budget App</h3>
 
@@ -397,7 +397,7 @@
                     porta felis euismod semper. Fusce dapibus tellus cursus.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #3f78e0">
+                  <a href="#" class="btn-text" style="color: #6271ac">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -406,7 +406,7 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="left">
-                  <img src="./assets/images/project-2.png" width="600" height="367" loading="lazy" alt="Web Design"
+                  <img src="./assets/images/int project-2.png" width="600" height="367" loading="lazy" alt="Web Design"
                     class="w-100">
                 </figure>
 
@@ -414,11 +414,11 @@
             </li>
 
             <li>
-              <div class="project-card project-card-3" style="background-color: #f5faf7">
+              <div class="project-card project-card-3" style="background-color: #c4cf882e">
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #7cb798">Web Design</p>
+                  <p class=" card-tag" style="color: #777e52">Web Design</p>
 
                   <h3 class="h3 card-title">Missio Theme</h3>
 
@@ -427,7 +427,7 @@
                     id ligula felis.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #7cb798">
+                  <a href="#" class="btn-text" style="color: #777e52">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -436,7 +436,7 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-3.png" width="600" height="367" loading="lazy" alt="Web Design"
+                  <img src="./assets/images/interior project 3rev.png" width="600" height="367" loading="lazy" alt="Web Design"
                     class="w-100">
                 </figure>
 
@@ -444,11 +444,11 @@
             </li>
 
             <li>
-              <div class="project-card project-card-4" style="background-color: #fcf4f6">
+              <div class="project-card project-card-4" style="background-color: #b199b03b">
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #d16b86">Mobile Design</p>
+                  <p class=" card-tag" style="color: #74637c">Mobile Design</p>
 
                   <h3 class="h3 card-title">Storage App</h3>
 
@@ -457,7 +457,7 @@
                     porta felis euismod semper.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #d16b86">
+                  <a href="#" class="btn-text" style="color: #74637c">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -466,7 +466,7 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-4.png" width="620" height="370" loading="lazy" alt="Mobile Design"
+                  <img src="./assets/images/furn project-4.png" width="620" height="370" loading="lazy" alt="Mobile Design"
                     class="w-100">
                 </figure>
 
