folder-html-projects

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     porta felis euismod semper. Fusce dapibus tellus cursus.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #c05301">
+                  <a href="./html/projects-1.html" class="btn-text" style="color: #c05301">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -397,7 +397,7 @@
                     porta felis euismod semper. Fusce dapibus tellus cursus.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #6271ac">
+                  <a href="./html/projects-2.html" class="btn-text" style="color: #6271ac">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -427,7 +427,7 @@
                     id ligula felis.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #777e52">
+                  <a href="./html/projects-3.html" class="btn-text" style="color: #777e52">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -457,7 +457,7 @@
                     porta felis euismod semper.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #74637c">
+                  <a href="./html/projects-4.html" class="btn-text" style="color: #74637c">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
