--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <figure class="hero-banner">
             <img src="./assets/images/busu.jpg" width="560" height="540" alt="Büşra" class="w-100" data-reveal="top">
 
-            <img src="./assets/images/hero-shape.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
+            <img src="./assets/images/hero-shape.png" width="203" height="91" alt="250+ Projects Done" class="shape"
               data-reveal="top" data-reveal-delay="0.25s">
           </figure>
 
@@ -308,7 +308,7 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-4.svg" width="52" height="52" loading="lazy" alt="web seo icon">
+                  <img src="./assets/images/icon-4.png" width="52" height="52" loading="lazy" alt="web seo icon">
                 </div>
 
                 <h3 class="h4 card-title">SEO</h3>
@@ -494,7 +494,7 @@
             <div class="contact-content" data-reveal="left">
 
               <div class="card-icon">
-                <img src="./assets/images/icon-5.svg" width="44" height="44" loading="lazy" alt="envelop icon">
+                <img src="./assets/images/icon-5.png" width="44" height="44" loading="lazy" alt="envelop icon">
               </div>
 
               <h2 class="h2 section-title">If you like what you see, let's work together.</h2>
