--- a/html/projects-4.html
+++ b/html/projects-4.html
@@ -47,7 +47,7 @@
     <header class="header" data-header>
         <div class="container">
 
-            <a href="./index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="../assets/images/busu-dark.png" width="64" height="24" alt="Julia home">
             </a>
 
