--- a/html/projects-4.html
+++ b/html/projects-4.html
@@ -84,9 +84,9 @@
                 </ul>
 
                 <div class="wrapper">
-                    <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+                    <a href="mailto:busraksici@gmail.com" class="contact-link">busraksici@gmail.com</a>
 
-                    <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+                    <!-- <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a> -->
                 </div>
 
                 <ul class="social-list">
@@ -134,21 +134,20 @@
         <div class="container">
 
             <figure class="hero-banners">
-                <img src="../assets/images/furn project-4.png" width="560" height="540" alt="Büşra" class="w-100"
+                <img src="../assets/images/f-kapak.png" width="560" height="540" alt="Büşra" class="w-100"
                     data-reveal="top">
-            </figure> 
+            </figure>
 
 
             <div class="hero-content">
 
                 <h1 class="h1 hero-title" data-reveal="top" data-reveal-delay="0.5s">
-                    I'm User Interface Designer & Developer.
+                    Furniture Design
                 </h1>
 
                 <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-                    Hello! I'm Büşra, a freelance user interface designer & developer based in London. I’m very
-                    passionate
-                    about the work that I do.
+                    The user can add or remove any material to the perforated surface. Functional flexibility is aimed
+                    in this design.
                 </p>
 
             </div>
@@ -173,21 +172,21 @@
                         <div class="card-content" data-reveal="left">
 
 
-                            <h3 class="h3 card-title">Snowlake Theme</h3>
+                            <!-- <h3 class="h3 card-title">Snowlake Theme</h3>
 
                             <p class="card-text">
                                 Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
                                 id ligula
                                 porta felis euismod semper. Fusce dapibus tellus cursus.
-                            </p>
+                            </p> -->
 
 
 
                         </div>
 
                         <figure class="card-banner" data-reveal="right">
-                            <img src="../assets/images/furn project-4.png" width="650" height="370" loading="lazy"
-                                alt="Web Design" class="w-100">
+                            <img src="../assets/images/f-3.png" width="650" height="370" loading="lazy" alt="Web Design"
+                                class="w-100">
                         </figure>
 
                     </div>
@@ -199,20 +198,20 @@
 
 
                         <figure class="card-banner" data-reveal="left">
-                            <img src="../assets/images/furn project-4.png" width="650" height="370" loading="lazy"
-                                alt="Web Design" class="w-100">
+                            <img src="../assets/images/f-1.jpg" width="650" height="370" loading="lazy" alt="Web Design"
+                                class="w-100">
                         </figure>
 
                         <div class="card-content" data-reveal="right">
 
 
-                            <h3 class="h3 card-title">Snowlake Theme</h3>
+                            <!-- <h3 class="h3 card-title">Snowlake Theme</h3>
 
                             <p class="card-text">
                                 Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
                                 id ligula
                                 porta felis euismod semper. Fusce dapibus tellus cursus.
-                            </p>
+                            </p> -->
 
 
 
@@ -231,53 +230,24 @@
                         <div class="card-content" data-reveal="left">
 
 
-                            <h3 class="h3 card-title">Snowlake Theme</h3>
 
-                            <p class="card-text">
-                                Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
-                                id ligula
-                                porta felis euismod semper. Fusce dapibus tellus cursus.
-                            </p>
+                            <a href="https://www.youtube.com/watch?v=bViV1bMi_wM" target="_blank" class="btn-text" style="color: #74637c">
+                                <h2 class="span">Watch Me</h2>
+
+                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                            </a>
 
 
 
                         </div>
 
                         <figure class="card-banner" data-reveal="right">
-                            <img src="../assets/images/furn project-4.png" width="650" height="370" loading="lazy"
-                                alt="Web Design" class="w-100">
+                            <img src="../assets/images/f-4.jpg" width="650" height="370" loading="lazy" alt="Web Design"
+                                class="w-100">
                         </figure>
 
                     </div>
                 </li>
-
-
-                <li>
-                    <div class="project-card project-card-1">
-
-
-                        <figure class="card-banner" data-reveal="left">
-                            <img src="../assets/images/furn project-4.png" width="650" height="370" loading="lazy"
-                                alt="Web Design" class="w-100">
-                        </figure>
-
-                        <div class="card-content" data-reveal="right">
-
-
-                            <h3 class="h3 card-title">Snowlake Theme</h3>
-
-                            <p class="card-text">
-                                Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
-                                id ligula
-                                porta felis euismod semper. Fusce dapibus tellus cursus.
-                            </p>
-
-
-
-                        </div>
-                    </div>
-                </li>
-
 
 
         </div>
@@ -341,7 +311,7 @@
         <div class="container">
 
             <p class="copyright">
-                © 2022 Webon. All rights reserved.
+                © 2023 Webon. All rights reserved.
             </p>
 
             <ul class="social-list">
