--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Büşra - I'm User Interface Designer & Developer.</title>
-  <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
+  <title>Busu Design</title>
+  <meta name="title" content="Busu Design">
   <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
 
   <!-- 
@@ -84,9 +84,9 @@
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+          <a href="mailto:busraksici@gmail.com" class="contact-link">busraksici@gmail.com</a>
 
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+          <!-- <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a> -->
         </div>
 
         <ul class="social-list">
@@ -139,19 +139,19 @@
           <figure class="hero-banner">
             <img src="./assets/images/busu.jpg" width="560" height="540" alt="Büşra" class="w-100" data-reveal="top">
 
-            <img src="./assets/images/hero-shape.png" width="203" height="91" alt="250+ Projects Done" class="shape"
+            <img src="./assets/images/hero-shape-1.png" width="203" height="91" alt="250+ Projects Done" class="shape"
               data-reveal="top" data-reveal-delay="0.25s">
           </figure>
 
           <div class="hero-content">
 
             <h1 class="h1 hero-title" data-reveal="top" data-reveal-delay="0.5s">
-              I'm User Interface Designer & Developer.
+              I'm Designer & Developer.
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-              Hello! I'm Büşra, a freelance user interface designer & developer based in London. I’m very passionate
-              about the work that I do.
+              I am Busra, an interior architect and designer with a keen eye for art.
+              Learning means new experiences for me.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
@@ -182,9 +182,9 @@
               <h2 class="h2 section-title">What I Do?</h2>
 
               <p class="section-text">
-                Duis mollis est commodo luctus nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis
-                risus eget urna mollis ornare vel. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus
-                magna, vel scelerisque nisl.
+                My academic progression towards interior architecture has provided me with opportunities to think
+                different perspectives, build creative and fertile atmospheres-concepts for user. I always care about
+                improving myself.
               </p>
             </div>
 
@@ -193,13 +193,13 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>Web Design</p>
+                  <p>Interior Architecture</p>
 
-                  <span class="span">100 %</span>
+                  <span class="span">95 %</span>
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 100%; background-color: #c05301a3"></div>
+                  <div class="progress-fill" style="width: 95%; background-color: #c05301a3"></div>
                 </div>
 
               </li>
@@ -207,13 +207,13 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>Mobile Design</p>
+                  <p> Furniture Design</p>
 
-                  <span class="span">80 %</span>
+                  <span class="span">70 %</span>
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 80%; background-color: #6271ac9e"></div>
+                  <div class="progress-fill" style="width: 70%; background-color: #6271ac9e"></div>
                 </div>
 
               </li>
@@ -221,13 +221,13 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>Development</p>
+                  <p>Web Development</p>
 
-                  <span class="span">85 %</span>
+                  <span class="span">45 %</span>
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 85%; background-color: #777e5296"></div>
+                  <div class="progress-fill" style="width: 45%; background-color: #777e5296"></div>
                 </div>
 
               </li>
@@ -235,13 +235,13 @@
               <li class="progress-item">
 
                 <div class="label-wrapper">
-                  <p>SEO</p>
+                  <p>UX/UI Design</p>
 
-                  <span class="span">90 %</span>
+                  <span class="span">35 %</span>
                 </div>
 
                 <div class="progress">
-                  <div class="progress-fill" style="width: 90%; background-color: #74637c8a"></div>
+                  <div class="progress-fill" style="width: 35%; background-color: #74637c8a"></div>
                 </div>
 
               </li>
@@ -256,14 +256,13 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-1.svg" width="52" height="52" loading="lazy" alt="web design icon">
+                  <img src="./assets/images/icon-4.png" width="52" height="52" loading="lazy" alt="web design icon">
                 </div>
 
-                <h3 class="h4 card-title">Web Design</h3>
+                <h3 class="h4 card-title">Interior Architecture</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  AutoCad, 3Ds Max + Corona Render, Lumion, Adobe Premiere Pro
                 </p>
 
               </div>
@@ -273,14 +272,13 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-2.svg" width="52" height="52" loading="lazy" alt="mobile design icon">
+                  <img src="./assets/images/icon-3.svg" width="52" height="52" loading="lazy" alt="mobile design icon">
                 </div>
 
-                <h3 class="h4 card-title">Mobile Design</h3>
+                <h3 class="h4 card-title">Furniture Design</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  AutoCad, SketchUp, Adobe After Effects
                 </p>
 
               </div>
@@ -290,15 +288,14 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-3.svg" width="52" height="52" loading="lazy"
+                  <img src="./assets/images/icon-1.svg" width="52" height="52" loading="lazy"
                     alt="web development icon">
                 </div>
 
-                <h3 class="h4 card-title">Development</h3>
+                <h3 class="h4 card-title">Web Development</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  HTML, CSS, JavaScript, Node.js + Express
                 </p>
 
               </div>
@@ -308,14 +305,13 @@
               <div class="about-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/icon-4.png" width="52" height="52" loading="lazy" alt="web seo icon">
+                  <img src="./assets/images/icon-2.svg" width="52" height="52" loading="lazy" alt="web seo icon">
                 </div>
 
-                <h3 class="h4 card-title">SEO</h3>
+                <h3 class="h4 card-title">UX/UI Design</h3>
 
                 <p class="card-text">
-                  Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
-                  justo cum sociis natoque magnis.
+                  Adobe Photoshop, Illustrator, Figma
                 </p>
 
               </div>
@@ -347,8 +343,6 @@
               </p>
             </div>
 
-            <a href="https://www.instagram.com/busraksici_/" target="_blank" class="btn btn-secondary">See All Projects</a>
-
           </div>
 
           <ul class="grid-list">
@@ -358,13 +352,13 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class="card-tag" style="color: #c05301">Web Design</p>
+                  <p class="card-tag" style="color: #c05301">Interior Architecture</p>
 
-                  <h3 class="h3 card-title">Snowlake Theme</h3>
+                  <h3 class="h3 card-title">Lazzoni Office Design</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper. Fusce dapibus tellus cursus.
+                    Office was designed for Lazzoni Modern Furniture & Interiors brand, space separation is created with
+                    elevation differences.
                   </p>
 
                   <a href="./html/projects-1.html" class="btn-text" style="color: #c05301">
@@ -376,8 +370,8 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/interior project 1.png" width="650" height="370" loading="lazy" alt="Web Design"
-                    class="w-100">
+                  <img src="./assets/images/interior project 1.png" width="650" height="370" loading="lazy"
+                    alt="Web Design" class="w-100">
                 </figure>
 
               </div>
@@ -388,13 +382,13 @@
 
                 <div class="card-content" data-reveal="right">
 
-                  <p class=" card-tag" style="color: #6271ac">Mobile Design</p>
+                  <p class=" card-tag" style="color: #6271ac">Interior Architecture</p>
 
-                  <h3 class="h3 card-title">Budget App</h3>
+                  <h3 class="h3 card-title">Sakura Office Design</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper. Fusce dapibus tellus cursus.
+                    New generation office designed for Sakura Mobile is purposed with the concept of "break off". The
+                    simplicity in the Japanese interior concept is reflected in the interior.
                   </p>
 
                   <a href="./html/projects-2.html" class="btn-text" style="color: #6271ac">
@@ -418,13 +412,13 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #777e52">Web Design</p>
+                  <p class=" card-tag" style="color: #777e52">Interior Architecture</p>
 
-                  <h3 class="h3 card-title">Missio Theme</h3>
+                  <h3 class="h3 card-title">Durukan Recreation Area</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere porta consectetur cursus porta lobortis. Scelerisque
-                    id ligula felis.
+                    Conceptual approach on Durukan project was created based on the formula of sugar. The hexagonal form was obtained
+                    by simplifying the formula. The interior was designed using the hexagonal grid system.
                   </p>
 
                   <a href="./html/projects-3.html" class="btn-text" style="color: #777e52">
@@ -436,8 +430,8 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/interior project 3rev.png" width="600" height="367" loading="lazy" alt="Web Design"
-                    class="w-100">
+                  <img src="./assets/images/d-new.png" width="600" height="367" loading="lazy"
+                    alt="Web Design" class="w-100">
                 </figure>
 
               </div>
@@ -448,13 +442,14 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #74637c">Mobile Design</p>
+                  <p class=" card-tag" style="color: #74637c">Furniture Design</p>
 
-                  <h3 class="h3 card-title">Storage App</h3>
+                  <h3 class="h3 card-title">Lazzoni Add | Dot Table</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper.
+                    The purpose of the design is to design a furniture
+                    that the user can individualize. The purpose of using perforated metal is that it provides many
+                    functions. The user can add or remove any material to the perforated surface.
                   </p>
 
                   <a href="./html/projects-4.html" class="btn-text" style="color: #74637c">
@@ -466,8 +461,8 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/furn project-4.png" width="620" height="370" loading="lazy" alt="Mobile Design"
-                    class="w-100">
+                  <img src="./assets/images/furn project-4.png" width="620" height="370" loading="lazy"
+                    alt="Mobile Design" class="w-100">
                 </figure>
 
               </div>
@@ -540,7 +535,7 @@
     <div class="container">
 
       <p class="copyright">
-        © 2022 Webon. All rights reserved.
+        © 2023 Webon. All rights reserved.
       </p>
 
       <ul class="social-list">
