watch-link-update

--- a/html/projects-1.html
+++ b/html/projects-1.html
@@ -231,13 +231,13 @@
                         <div class="card-content" data-reveal="left">
 
 
-                            <a href="https://www.youtube.com/watch?v=c1wTGGI97_U&t=2s" target="_blank" class="btn-text"
-                                style="color: #c05301">
-                                <h2 class="span">Watch Me</h2>
+                            <!-- <h3 class="h3 card-title">Snowlake Theme</h3>
 
-                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                            </a>
-
+                            <p class="card-text">
+                                Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
+                                id ligula
+                                porta felis euismod semper. Fusce dapibus tellus cursus.
+                            </p> -->
 
 
                         </div>
@@ -249,6 +249,21 @@
 
                     </div>
                 </li>
+
+                <ul class="grid-list">
+
+                    <li>
+                        <div class="project-card project-card-1">
+
+                            <a href="https://www.youtube.com/watch?v=c1wTGGI97_U&t=2s" target="_blank" class="btn-text"
+                                style="color: #c05301">
+                                <h2 class="span">Watch Me</h2>
+
+                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                            </a>
+
+                        </div>
+                    </li>
 
 
 
