--- a/html/projects-2.html
+++ b/html/projects-2.html
@@ -229,13 +229,13 @@
 
                         <div class="card-content" data-reveal="left">
 
+                            <!-- <h3 class="h3 card-title">Snowlake Theme</h3>
 
-                            <a href="https://www.youtube.com/watch?v=pXdg2V_9cWM" target="_blank" class="btn-text" style="color: #6271ac">
-                                <h2 class="span">Watch Me</h2>
-
-                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                            </a>
-
+                            <p class="card-text">
+                                Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
+                                id ligula
+                                porta felis euismod semper. Fusce dapibus tellus cursus.
+                            </p> -->
 
 
                         </div>
@@ -247,6 +247,23 @@
 
                     </div>
                 </li>
+
+                <ul class="grid-list">
+
+                    <li>
+                        <div class="project-card project-card-1">
+
+
+                            <a href="https://www.youtube.com/watch?v=pXdg2V_9cWM" target="_blank" class="btn-text"
+                                style="color: #6271ac">
+                                <h2 class="span">Watch Me</h2>
+
+                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                            </a>
+
+
+                        </div>
+                    </li>
 
 
         </div>
