--- a/html/projects-3.html
+++ b/html/projects-3.html
@@ -185,8 +185,8 @@
                         </div>
 
                         <figure class="card-banner" data-reveal="right">
-                            <img src="../assets/images/d-4.png" width="650" height="370"
-                                loading="lazy" alt="Web Design" class="w-100">
+                            <img src="../assets/images/d-4.png" width="650" height="370" loading="lazy" alt="Web Design"
+                                class="w-100">
                         </figure>
 
                     </div>
@@ -198,8 +198,8 @@
 
 
                         <figure class="card-banner" data-reveal="left">
-                            <img src="../assets/images/d-3.png" width="650" height="370"
-                                loading="lazy" alt="Web Design" class="w-100">
+                            <img src="../assets/images/d-3.png" width="650" height="370" loading="lazy" alt="Web Design"
+                                class="w-100">
                         </figure>
 
                         <div class="card-content" data-reveal="right">
@@ -230,23 +230,42 @@
                         <div class="card-content" data-reveal="left">
 
 
-                            <a href="https://www.youtube.com/watch?v=df1qJh2Sl2k" target="_blank" class="btn-text" style="color: #777e52">
-                                <h2 class="span">Watch Me</h2>
+                            <!-- <h3 class="h3 card-title">Snowlake Theme</h3>
 
-                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                            </a>
+                            <p class="card-text">
+                                Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque
+                                id ligula
+                                porta felis euismod semper. Fusce dapibus tellus cursus.
+                            </p> -->
 
 
 
                         </div>
 
                         <figure class="card-banner" data-reveal="right">
-                            <img src="../assets/images/d-2.png" width="650" height="370"
-                                loading="lazy" alt="Web Design" class="w-100">
+                            <img src="../assets/images/d-2.png" width="650" height="370" loading="lazy" alt="Web Design"
+                                class="w-100">
                         </figure>
 
                     </div>
                 </li>
+
+                <ul class="grid-list">
+
+                    <li>
+                        <div class="project-card project-card-1">
+
+
+                            <a href="https://www.youtube.com/watch?v=pXdg2V_9cWM" target="_blank" class="btn-text"
+                                style="color: #777e52">
+                                <h2 class="span">Watch Me</h2>
+
+                                <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                            </a>
+
+
+                        </div>
+                    </li>
 
 
         </div>
