--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Busu Design</title>
   <meta name="title" content="Busu Design">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+  <meta name="description" content="Hello, I'm busra, welcome to my website">
 
   <!-- 
     - favicon
@@ -137,7 +137,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/busu.jpg" width="560" height="540" alt="Büşra" class="w-100" data-reveal="top">
+            <img src="./assets/images/busu.jpg" width="560" height="540" alt="Büşra" class="w-100" data-reveal="top" draggable="false">
 
             <img src="./assets/images/hero-shape-1.png" width="203" height="91" alt="250+ Projects Done" class="shape"
               data-reveal="top" data-reveal-delay="0.25s">
